--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation "com.facebook.stetho:stetho-okhttp3:1.5.0"
     implementation 'com.github.mmjindal2555:demolib:v0.1.0'
+
+    implementation project(":demolib")
 }
